# homey

./: .env.example  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  35a3a21e8fa9_final_state.py  7c40c1e419c3_fix_enums.py
backend/app/: cli.py  main.py  routes.py  utils.py
backend/app/ai/: embedding.py  search_parser.py
backend/app/controllers/: listing_controller.py  search_controller.py
backend/app/core/: config.py  container.py  logging.py
backend/app/core/exceptions/: exceptions.py  handlers.py
backend/app/db/: session.py
backend/app/db/models/: __init__.py  listing.py  listing_image.py  listing_source.py
backend/app/dependencies/: services.py
backend/app/schemas/: enums.py  listing.py  search.py
backend/app/services/: listing_service.py  search_service.py
backend/scraper/habitaclia/: scraper.ipynb
frontend/: Dockerfile  components.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/components/layout/: header.tsx
frontend/src/components/listings/: ListingDetails.tsx  ListingDetailsCharacteristics.tsx  Map.tsx  (+6 more)
frontend/src/hooks/: use-search-params-state.ts
frontend/src/lib/: format.ts  query-client.ts  query-keys.ts  schemas.ts  utils.ts
frontend/src/pages/: HomePage.tsx  ListingDetailsPage.tsx  ListingsPage.tsx
frontend/src/styles/: globals.css
(+6 files in other folders)
